--- a/package.json
+++ b/package.json
@@ -98,10 +98,14 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.8",
     "@lezer/highlight": "^1.2.3",
-    "esbuild": "^0.27.1"
+    "esbuild": "^0.27.1",
+    "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:verbose": "jest --verbose",
     "build:codemirror": "esbuild build/codemirror-bundle.js --bundle --minify --format=iife --outfile=assets/js/vendor/codemirror.min.js"
   },
   "repository": {
